--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-I made it using laravel so please use localhost for oopening it
+I made it using laravel so please use localhost for opening it.  And please migrarte files before use.
